--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Italian poetry -- 16th century'
+- GITenberg
 title: 'Opera nova amorosa, vol. 1
 
   Strambotti, sonetti, capitoli, epistole et una disperata'
